# quarry

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  spec-browser.md  spec.md  spec_with_human_comments.md
.ai/plans/: inline-agent-markdown-insert-suggestions.md  quarry-document-ip-cloudfront-logging.md
.ai/research/: claude.md  gemini.md  openai.md
.cargo/: config.toml
.claude/skills/verify/: SKILL.md
.github/actions/release-docker/: action.yml
.github/workflows/: docker-multiarch-prebuilt-test.yml  e2e-live.yml  release-build.yml  release-docker.yml  release-nightly.yml  release-stable.yml  release.yml  rust.yml  typescript.yml
Formula/: quarry.rb
crates/quarry/: Cargo.toml
crates/quarry-api/: Cargo.toml
crates/quarry-api/src/: lib.rs  web_ui.html
crates/quarry-cas/: Cargo.toml
crates/quarry-cas/src/: lib.rs
crates/quarry-cli/: Cargo.toml
crates/quarry-cli/src/: detect_agent.rs  lib.rs  main.rs
crates/quarry-cli/tests/: client_commands.rs
crates/quarry-collab-codec/: Cargo.toml  block-capabilities.json
crates/quarry-collab-codec/src/: block_capabilities.rs  lib.rs  markdown.rs  markdown_writer.rs  normalize.rs  reconcile.rs  review.rs  rows.rs  session_doc.rs  slate.rs  text_diff.rs  trailing.rs  yjs_builder.rs
crates/quarry-collab-codec/tests/: block_rows.rs  codec.rs  compat.rs  phase_zero_gate_a.rs  phase_zero_gate_c.rs  reconcile.rs  session_doc.rs
crates/quarry-core/: Cargo.toml
crates/quarry-core/src/: lib.rs
crates/quarry-dev/: Cargo.toml
crates/quarry-dev/src/: lib.rs  main.rs  release.rs
crates/quarry-fuse/: Cargo.toml
crates/quarry-fuse/src/: lib.rs
crates/quarry-fuse/tests/: projection.rs
crates/quarry-git/: Cargo.toml
crates/quarry-git/src/: lib.rs
crates/quarry-git/tests/: git_roundtrip.rs
crates/quarry-server/: Cargo.toml
crates/quarry-server/resources/: agent-docs.md  example.md  home.html  home.js  prompt.md  quarry.SKILL.md  setup.md
crates/quarry-server/src/: agent_events.rs  agent_prompt.rs  assets.rs  collab.rs  collab_handlers.rs  conflicts.rs  discovery.rs  document_handlers.rs  error.rs  gateway.rs  git_handlers.rs  headers.rs  journal.rs  lib.rs  library_handlers.rs  log_redaction.rs  markdown_write.rs  onboarding.rs  presence.rs  review.rs  search_handlers.rs  session.rs  sse.rs  system_handlers.rs  tmp_document_handlers.rs  transaction_handlers.rs
crates/quarry-server/tests/: feature_surface.rs  rest_agent_discovery.rs  rest_agent_presence.rs  rest_api.rs  rest_api_errors.rs  rest_block_transactions.rs  rest_collab_sessions.rs  rest_documents.rs  rest_markdown_reconcile.rs  rest_observability.rs  rest_onboarding.rs  rest_tmp_documents.rs  shutdown.rs
crates/quarry-server/tests/common/: mod.rs
crates/quarry-storage/: Cargo.toml
crates/quarry-storage/src/: blocks.rs  directories.rs  documents.rs  events.rs  lib.rs  libraries.rs  links.rs  row.rs  schema.rs  search.rs  store.rs  sync.rs  tmp_documents.rs  transactions.rs  versions.rs
crates/quarry-storage/tests/: storage_lifecycle.rs
crates/quarry-store/: Cargo.toml
crates/quarry-store/src/: lib.rs
crates/quarry/src/: main.rs
crates/quarry/tests/: cli_smoke.rs
docs/: architecture.md  development.md  export-and-access.md  manual-test-plan.md
docs/deep-research/: anthropic.md  gemini.md  openai.md
docs/operations/: backup-restore.md  cloudfront-logging.md  conflicts.md  fuse.md  git-sync.md  install-linux.md  rest-api.md
docs/security/: threat-model.md
docs/superpowers/plans/: 2026-05-28-cli-api-daemon-and-server-mounts.md  2026-05-28-document-ttl-expiry.md  2026-05-28-fuse-mount-masks.md  2026-05-28-metadata-null-delete-patch.md  2026-05-28-transaction-draft-overlay.md  2026-05-30-review-markup-layer-codec.md  2026-05-30-review-markup-layer-editor-store.md  2026-05-31-review-markup-layer-ui.md  2026-06-02-markdown-tables.md  2026-06-09-session-scoped-collab-rewrite.md  2026-06-12-first-run-onboarding-modal.md  2026-07-01-tmp-capability-documents.md  2026-07-11-release-process-alignment.md
docs/superpowers/specs/: 2026-05-30-review-markup-layer-design.md  2026-06-02-markdown-tables-design.md  2026-06-03-collaborative-editing-design.md  2026-06-03-slate-yjs-rust-port-analysis.md  2026-06-07-collab-editor-session-lifecycle.md  2026-06-09-session-scoped-collab-design.md  2026-06-09-session-scoped-collab-phase-zero-findings.md  2026-06-12-first-run-onboarding-design.md
fixtures/slate-yjs-compat/: manifest.json
fixtures/slate-yjs-compat/cases/: blocks.json  break-semantics.json  core-inline.json  critic-markup.json  definition-list.json  footnote.json  nested-list.json  ordered-list.json  review-blockquote-comment.json  review-code-literal.json  review-comment-only.json  review-comment.json  review-heading-comment.json  review-heading-suggestion.json  review-list-comment.json  review-substitution.json  review-suggestion.json  review-table-suggestion.json  table.json  task-list.json  utf16.json  zero-width-placeholder.json
installer/: quarry.rb.template
scripts/: quarry_v1_demo.sh  update-homebrew-formula.rb  update-homebrew-formula_test.rb
sdk/quarry-sdk-ts/: package-lock.json  package.json  tsconfig.json
sdk/quarry-sdk-ts/src/: index.ts
ui/: index.html  package.json  playwright.config.ts  playwright.live.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
ui/scripts/: gen-slate-yjs-fixtures.ts  generate-api.ts
ui/src/: main.tsx  styles.css
ui/src/api/: client.test.ts  client.ts  document-ref.ts
ui/src/app/: App.tsx  agent-invite.test.ts  agent-invite.ts  document-body.tsx  open-document-state.test.ts  open-document-state.ts  welcome-document.ts  workspace-event-stream.ts  workspace-navigation.test.ts  workspace-navigation.ts  workspace-provenance.test.tsx  workspace.test.tsx
ui/src/lib/: utils.ts
ui/tests/: live-block-delete-conformance.spec.ts  live-collab-agent-smoke.spec.ts  live-collab-comment-draft.spec.ts  live-reconnect-reseed.spec.ts  live-session-collaborator-spike.spec.ts  review-rail.spec.ts  review-round-trip.spec.ts  workspace.spec.ts
(+115 files in other folders)
