[workspace]
members = [
    "crates/quarry-api",
    "crates/quarry-cli",
    "crates/quarry-store",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/navanchauhan/ai-quarry"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json", "tokio", "ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
http = "1.1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.12"
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
