[workspace]
members = [
    "crates/quarry-core",
    "crates/quarry-cas",
    "crates/quarry-collab-codec",
    "crates/quarry-storage",
    "crates/quarry-git",
    "crates/quarry-fuse",
    "crates/quarry-server",
    "crates/quarry-cli",
    "crates/quarry",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "macros", "ws"] }
blake3 = "1.8"
bytes = "1.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
fs2 = "0.4"
git2 = "0.21"
http = "1.1"
indexmap = { version = "2.7", features = ["serde"] }
mime_guess = "2.0"
pulldown-cmark = "0.13"
regex = "1.11"
rust-embed = "8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.12"
thiserror = "2.0"
tokio = { version = "1.40", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
turso = { version = "0.7.0-pre.4", default-features = false }
utoipa = { version = "5.5", features = ["chrono", "uuid"] }
utoipa-axum = "0.2"
uuid = { version = "1.10", features = ["v4", "serde"] }
walkdir = "2.5"
yrs = { version = "0.27", features = ["sync"] }

quarry-core = { path = "crates/quarry-core" }
quarry-cas = { path = "crates/quarry-cas" }
quarry-collab-codec = { path = "crates/quarry-collab-codec" }
quarry-storage = { path = "crates/quarry-storage" }
quarry-git = { path = "crates/quarry-git" }
quarry-fuse = { path = "crates/quarry-fuse" }
quarry-server = { path = "crates/quarry-server" }
quarry-cli = { path = "crates/quarry-cli" }
