[workspace]
members = [
    "crates/quarry-core",
    "crates/quarry-cas",
    "crates/quarry-collab-codec",
    "crates/quarry-storage",
    "crates/quarry-git",
    "crates/quarry-fuse",
    "crates/quarry-server",
    "crates/quarry-cli",
    "crates/quarry",
    "crates/quarry-dev",
]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
unfulfilled_lint_expectations = "allow"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
allow_attributes_without_reason = "deny"
unwrap_used = "deny"
assigning_clones = "allow"
case_sensitive_file_extension_comparisons = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
default_trait_access = "allow"
doc_markdown = "allow"
duration_suboptimal_units = "allow"
format_push_string = "allow"
format_collect = "allow"
ignored_unit_patterns = "allow"
implicit_clone = "allow"
items_after_statements = "allow"
manual_let_else = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
needless_raw_string_hashes = "allow"
needless_continue = "allow"
redundant_closure_for_method_calls = "allow"
ref_option = "allow"
return_self_not_must_use = "allow"
semicolon_if_nothing_returned = "allow"
similar_names = "allow"
single_match_else = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"
uninlined_format_args = "allow"
unnested_or_patterns = "allow"
unused_async = "allow"
unused_self = "allow"
wildcard_imports = "allow"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "macros", "ws"] }
blake3 = "1.8"
bytes = "1.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
fs2 = "0.4"
git2 = "0.21"
http = "1.1"
indexmap = { version = "2.7", features = ["serde"] }
mime_guess = "2.0"
open = "5.3.6"
percent-encoding = "2.3"
pulldown-cmark = "0.13"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = "8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
semver = "1.0"
similar = "2.6"
tempfile = "3.12"
thiserror = "2.0"
tokio = { version = "1.40", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
turso = { version = "0.7.0-pre.4", default-features = false }
utoipa = { version = "5.5", features = ["chrono", "uuid"] }
utoipa-axum = "0.2"
uuid = { version = "1.10", features = ["v4", "serde"] }
walkdir = "2.5"
yrs = { version = "0.27", features = ["sync"] }

quarry-core = { path = "crates/quarry-core" }
quarry-cas = { path = "crates/quarry-cas" }
quarry-collab-codec = { path = "crates/quarry-collab-codec" }
quarry-storage = { path = "crates/quarry-storage" }
quarry-git = { path = "crates/quarry-git" }
quarry-fuse = { path = "crates/quarry-fuse" }
quarry-server = { path = "crates/quarry-server", default-features = false }
quarry-cli = { path = "crates/quarry-cli", default-features = false }
