[package]
name = "quarry-cas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
blake3.workspace = true
quarry-core.workspace = true
serde.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
