[package]
name = "quarry-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
bundle_ui = ["quarry-server/bundle_ui"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
mime_guess.workspace = true
quarry-core.workspace = true
quarry-fuse.workspace = true
quarry-git.workspace = true
quarry-server.workspace = true
quarry-storage.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
