[package]
name = "quarry-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["tmp-documents"]
tmp-documents = ["quarry-server/tmp-documents"]
lib-documents = ["quarry-server/lib-documents"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
mime_guess.workspace = true
quarry-core.workspace = true
quarry-fuse.workspace = true
quarry-git.workspace = true
quarry-server = { workspace = true, default-features = false }
quarry-storage.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
