[package]
name = "quarry-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["tmp-documents"]
tmp-documents = ["quarry-server/tmp-documents"]
lib-documents = ["quarry-server/lib-documents", "dep:quarry-fuse", "dep:quarry-git"]
admin-api = ["quarry-server/admin-api"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
mime_guess.workspace = true
quarry-core.workspace = true
quarry-fuse = { workspace = true, optional = true }
quarry-git = { workspace = true, optional = true }
quarry-server = { workspace = true, default-features = false }
quarry-storage.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
