[package]
name = "quarry-collab-codec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
indexmap.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
similar.workspace = true
thiserror.workspace = true
yrs.workspace = true
