[package]
name = "quarry-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]
chrono.workspace = true
quarry-collab-codec.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
utoipa = { workspace = true, optional = true }
uuid.workspace = true
