[package]
name = "quarry-dev"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Internal development tooling for Quarry"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
semver.workspace = true

[dev-dependencies]
tempfile.workspace = true
