[package]
name = "quarry-fuse"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mime_guess.workspace = true
quarry-core.workspace = true
quarry-storage.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
bytes.workspace = true
chrono.workspace = true
fuse3 = { version = "0.9", default-features = false, features = ["tokio-runtime", "unprivileged"] }
futures-util.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
