[package]
name = "quarry-git"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
git2.workspace = true
mime_guess.workspace = true
quarry-core.workspace = true
quarry-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
