[package]
name = "quarry-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
git2.workspace = true
mime_guess.workspace = true
quarry-core.workspace = true
quarry-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
anyhow.workspace = true
# Test-only (cargo-sanctioned dev cycle): the Phase 4 reconciled markdown
# writer is implemented by quarry-server; git round-trip tests play the
# owning process and install it.
quarry-server.workspace = true
tempfile.workspace = true
