[package]
name = "quarry-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
bundle_ui = ["dep:rust-embed"]

[dependencies]
axum.workspace = true
blake3.workspace = true
bytes.workspace = true
chrono.workspace = true
futures-util.workspace = true
http.workspace = true
mime_guess.workspace = true
percent-encoding.workspace = true
pulldown-cmark.workspace = true
quarry-core.workspace = true
quarry-collab-codec.workspace = true
quarry-git.workspace = true
quarry-storage.workspace = true
regex.workspace = true
rust-embed = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true
yrs.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tokio-tungstenite.workspace = true
