[package]
name = "quarry-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["tmp-documents"]
tmp-documents = []
lib-documents = []

[dependencies]
axum.workspace = true
blake3.workspace = true
bytes.workspace = true
chrono.workspace = true
futures-util.workspace = true
http.workspace = true
mime_guess.workspace = true
percent-encoding.workspace = true
pulldown-cmark.workspace = true
quarry-core = { workspace = true, features = ["openapi"] }
quarry-collab-codec.workspace = true
quarry-git.workspace = true
quarry-storage.workspace = true
regex.workspace = true
rust-embed = { workspace = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
similar.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true
yrs.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tokio-tungstenite.workspace = true
tracing-subscriber.workspace = true
