[package]
name = "quarry-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
fs2.workspace = true
quarry-cas.workspace = true
quarry-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
turso.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
