[package]
name = "quarry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["tmp-documents"]
tmp-documents = ["quarry-cli/tmp-documents"]
lib-documents = ["quarry-cli/lib-documents"]
admin-api = ["quarry-cli/admin-api"]

[[bin]]
name = "quarry"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
quarry-cli = { workspace = true, default-features = false }
tokio.workspace = true

[dev-dependencies]
quarry-core.workspace = true
quarry-storage.workspace = true
serde_json.workspace = true
tempfile.workspace = true
